--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,11 @@
   font-weight: 700;
   font-style: normal;
 }
+
+.layout {
+  /* 드래그를 막는 스타일 */
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+}
